# wRATter

./: .gitignore  CMakeLists.txt  Makefile  ROOT2CSV.cc  ReadFile.hh  SetROOTEnv.sh  wRATter.cpp
include/: EventDisplay.hh  Hit.hh  Utils.hh  Wrapper.hh
include/wRATter/: Wrapper.hh
src/wRATter/: Wrapper.cc
